# Taskly

./: .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_06_09_2035-86c0c1b194ff_create_users_table.py
src/: config.py  database.py  main.py
src/auth/: config.py  models.py  router.py  service.py
